--- a/cod/Index.html
+++ b/cod/Index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sum com TypeScript</title>
 </head>
 <body>
     <h1>Hello Guanabara - Curso em video</h1>
     <hr>
+    <input type="number" id="num1">
+    <span>+</span>
+    <input type="number" id="num2">
+    <button id="buttom">Somar</button>
+    <script src="index.ts"></script>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur maxime, sequi ipsum dolorum voluptate commodi ut sunt veniam non, saepe suscipit ipsa excepturi eum eos? Modi aliquid beatae vitae vero.</p>
     
 </body>
