adicionando comando basicos do git

--- a/cod/Index.html
+++ b/cod/Index.html
@@ -7,7 +7,7 @@
     <title>Sum com TypeScript</title>
 </head>
 <body>
-    <h1>Hello Guanabara - Curso em video</h1>
+    <h1>Hello</h1>
     <hr>
     <input type="number" id="num1">
     <span>+</span>
